FEAT: 핀고정 관리 팝업에서 확인할 수 있는 게시판 조회 API 추가 구현